2006-08-27  Dennis Cranston  <dennis_cranston@yahoo.com>

	BUGZILLA: #349187, #350457, #351185, #351534, #351538, #351540, 
	#351544, #351545, #351546, #352147 and #351532. 

	* data/baobab.glade: Remove search dialog and tab.  More HIG 
	related fixes for the graphical usage map window. Add a scan home 
	directory item to menu and toolbar.  Add expand all and collapse 
	items all items to edit menu.  In the preference dialog, add a 
	help button and rephrase a some strings.  Add a stop menu item to 
	the view menu.
	* data/baobab.dekstop.in.in: Change tooltip to match style used
	in GNOME.
	* data/baobab.schemas.in:  Don't show the statusbar by default.
	* src/Makefile.am: Add baobab-spinner.[ch]
	* src/baobab-spinner.[ch]: New files for spinner widget.
	* src/baobab-graphwin.c: (graph_save_cb): HIG fixes for the save
	snapshot dialog, (baobab_graphwin_create):  HIG fixes for window
	title.
	* src/baobab-prefs.c: (props_notify): remove, (response_cb): Add
	filechooser callback to handle the close and help responses,
	(create_props):  Connect to the response signal.
	* src/baobab-remote-connect-dialog.c: (remote_connect): HIG fixes,
	(setup_for_type): Get entries from required or optional table,
	(baobab_remote_connect_dialog_init): HIG fixes for remote scan
	dialog, separate entries into required and optional categories.
	* src/baobab-scan.c: (loopsearch): Remove, (searchDir): Remove.
	* src/baobab-utils.h: Remove search functions and adjust arguments.	
	* src/callbacks.h:  Remove sort and search callbacks.  Add home
	folder scan callbacks.  Add allocated space menu item callback.
	* src/baobab-treeview.c: (on_tv_cur_changed): Remove notebook tab
	logic, (on_tv_button_press): Remove notebook tab logic,
	, (create_directory_treeview): Add column headers and setup the 
	appropriate column ids for sorting. Merge the percentage and 
	percentage bar columns into a single column.  Show horizontal
	and vertical scrollbars as needed. (baobab_treeview_equal_func): 